--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrogoblin Comment Shop Picker (local testing)</title>
+    <title>Astrogoblin Comment Shop Picker</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
